# rts

./: Cargo.toml  build.bat  build_client.bat  build_release.bat  build_server.bat  lua.md  run.bat  run_client.bat  run_release.bat  run_server.bat
.cargo/: config.toml
assets/shaders/: sprite.wgsl
crates/engine/: Cargo.toml
crates/engine/src/: app.rs  camera.rs  font.rs  input.rs  lib.rs  tilemap.rs  ui.rs
crates/engine/src/renderer/: context.rs  mod.rs  sprite_batch.rs  texture.rs
crates/game/: Cargo.toml
crates/game/src/: components.rs  defs.rs  main.rs  net.rs  state.rs  systems.rs
crates/game/src/screens/: editor.rs  in_game.rs  loading.rs  lobby.rs  main_menu.rs  mod.rs  multiplayer.rs
crates/game/src/scripting/: api.rs  mod.rs
crates/net/: Cargo.toml
crates/net/src/: codec.rs  lib.rs  msg.rs
crates/server/: Cargo.toml
crates/server/src/: client_conn.rs  game_session.rs  lobby.rs  main.rs  scripting.rs  systems.rs  world.rs
resources/[base]/: fxmanifest.lua
resources/[base]/client/: hud.lua  sp_ai.lua
resources/[base]/server/: init.lua
resources/[base]/shared/: defs.lua  unit_ai.lua
scripts/ai/: init.lua  manifest.lua
scripts/base/: init.lua  manifest.lua
scripts/units/: init.lua  manifest.lua
