[package]
name    = "rts-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rts-server"
path = "src/main.rs"

[dependencies]
net        = { path = "../net", features = ["async"] }
glam       = { workspace = true }
hecs       = "0.10"
mlua       = { version = "0.10", features = ["lua54", "vendored"] }
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
log        = { workspace = true }
env_logger = "0.11"
